add image entry to fix manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "images": {
     "scaleway-golang-latest": {
         "directory": "latest",
         "architectures": [
@@ -6,4 +7,5 @@
         ],
         "marketplace-id":"6c8d25c0-cb6f-4220-98aa-830b7e479ba5"
     }
+  }
 }
